<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".Activity.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/purple_500" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">

            <!--Top Profile Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circularbordersolid"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">


                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/avatar_img"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_baseline_account_circle_24" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/proximanovaregular"
                        android:text="@string/name"
                        android:textColor="#424242"
                        android:textSize="21sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proximanovaregular"
                        android:text="@string/username"
                        android:textSize="14sp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:padding="10dp"
                            android:src="@drawable/ic_baseline_group_24"
                            android:contentDescription="@string/folls_icon" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/followers"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvFollowers"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/fols_count"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:padding="10dp"
                            android:src="@drawable/ic_baseline_group_24"
                            android:contentDescription="@string/following_icon" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvFollowing"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:maxLines="4"
                                android:singleLine="false"
                                android:text="@string/following_count"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:padding="10dp"
                            android:src="@drawable/ic_baseline_location_city_24"
                            android:contentDescription="@string/location_icon" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/companytitle"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvCompany"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/company"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:padding="10dp"
                            android:src="@drawable/ic_baseline_archive_24"
                            android:contentDescription="@string/repo_icon" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/repository"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvRepo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/repositoryvalue"
                                android:textSize="12sp" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="8dp"
                        tools:ignore="UselessParent">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:padding="10dp"
                            android:src="@drawable/ic_baseline_location_on_24"
                            android:contentDescription="@string/location_icon" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/locationtitle"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvLocation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:ellipsize="none"
                                android:maxLines="4"
                                android:scrollHorizontally="false"
                                android:singleLine="false"
                                android:text="@string/locationvalue"
                                android:textSize="12sp" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="8dp"
                        tools:ignore="UselessParent">

                        <Button
                            android:id="@+id/btnShare"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/share"
                            tools:ignore="NestedWeights" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/circularbordersolid"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewpager_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabs_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top" />
                </androidx.viewpager.widget.ViewPager>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>